--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/vivek1996/formsay-ui/issues"
   },
-  "homepage": "https://github.com/vivek1996/formsay-ui#readme"
+  "homepage": "https://github.com/vivek1996/formsay-ui#readme",
+  "devDependencies": {
+    "autoprefixer": "^9.1.5",
+    "browser-sync": "^2.24.7",
+    "cssnano": "^4.1.4",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-purgecss": "^1.1.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.1"
+  }
 }
