--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-purgecss": "^1.1.1",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "run-sequence": "^2.2.1"
   }
 }
